--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>assigment-7</title>
+  <title>Happy Store</title>
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous" />
+
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+    crossorigin="anonymous">
 
   <!-- google Montserrat  font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,23 +30,27 @@
 <body>
   <header></header>
   <main class="main">
-    <div class="search-field">
-      <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button"
-          data-toggle="button" aria-pressed="false" autocomplete="off"
-          id="search-btn" onclick="loadProducts()">
-          Search
-        </button>
+    <!------------------- Search field  ------------------>
+    <section class="my-5">
+      <div class="d-flex w-50 mx-auto ">
+        <input id="input-btn" type="text" class="form-control"
+          placeholder="Find Your Products Name"
+          aria-label="Recipient's username" aria-describedby="button-addon2">
+        <button onclick="loadProducts()" class="btn btn-primary px-4"
+          id="search-btn">Search</button>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-9 col-lg-9 col-sm-7">
+
+    </section>
+
+    <!--------- products show 3 colams  ------------>
+
+    <div class="row ">
+      <div class="col-md-8 col-lg-8 col-sm-7 ">
         <div id="all-products" class="">
-          <h1></h1>
+
         </div>
       </div>
-      <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
+      <div class="col-md-4 col-lg-4 col-sm-5 cart-main">
         <div class="cart" id="my-cart">
           <table class="table">
             <thead>
@@ -55,7 +65,7 @@
             <tbody>
               <tr>
                 <th>Total Added-Products:</th>
-                <td>$ <span id="total-Products">0</span></td>
+                <td><span id="total-Products">0</span></td>
                 <td></td>
                 <td></td>
               </tr>
@@ -95,6 +105,7 @@
 
   <!-- add javascript  file  -->
   <script src="./js/app.js"></script>
+
 </body>
 
 </html>
