--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 </head>
 
 <body>
-  <header></header>
+  <header>
+    <h1 class=" text-center my-4 fs-1 "> Welcome to <span
+        class=" text-uppercase text-info">Happy
+        Store</span>
+    </h1>
+  </header>
   <main class="main">
     <!------------------- Search field  ------------------>
     <section class="my-5">
